--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
+attrs==23.1.0
 aws-cdk-lib==2.72.0
-constructs>=10.0.0,<11.0.0
+aws-cdk.asset-awscli-v1==2.2.184
+aws-cdk.asset-kubectl-v20==2.1.1
+aws-cdk.asset-node-proxy-agent-v5==2.0.155
+cattrs==22.2.0
+colorama==0.4.6
+constructs==10.2.32
+importlib-resources==5.12.0
+iniconfig==2.0.0
+jsii==1.82.0
+packaging==23.1
+pluggy==1.0.0
+publication==0.0.3
+pytest==7.3.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+six==1.16.0
+typeguard==2.13.3
+typing_extensions==4.6.2
